[FIX] Webmail inbox module: color contrast issue in some themes on links in the webmail listing

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1650,6 +1650,10 @@ div.cvsup {
   margin-bottom: 0;
   min-height: 32px;
 }
+.webmail_list a {
+  color: inherit;
+  font-weight: bold;
+}
 @media (min-width: 768px) {
   .layout_social_modules .navbar-header {
     margin-top: -34px;
