--- a/themes/base_files/less/tiki-modules.less
+++ b/themes/base_files/less/tiki-modules.less
@@ -385,6 +385,11 @@ div.cvsup {
 	}
 }
 
+.webmail_list a {
+	color: inherit;
+	font-weight: bold;
+}
+
 @media (min-width: @screen-sm-min) {
 	.layout_social_modules .navbar-header {
 		margin-top: -34px;
